[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Player/Window_reforms/ReformContainer.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player/Window_reforms/Reform.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player/Window_reforms/Reform_button.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Objects/Player/Window_reforms/ThemeOfButtonReform.tres" type="Theme" id=5]
[ext_resource path="res://Objects/Player/Window_reforms/ButtonManager.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=3]
size = 32
extra_spacing_char = -3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_top = 3
extra_spacing_bottom = 3
extra_spacing_char = -3
font_data = ExtResource( 4 )

[node name="Reform" type="Panel"]
margin_top = 61.0
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_top = -120.0
margin_right = 182.0
margin_bottom = -61.0
custom_fonts/font = SubResource( 3 )
text = "Выходные"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 182.0
margin_top = -120.0
margin_right = 364.0
margin_bottom = -84.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 2 )
text = "Нет"
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1072.0
margin_bottom = 1019.0
custom_constants/separation = 0

[node name="EconomyReforms" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1072.0
margin_bottom = 339.0
size_flags_vertical = 3
custom_constants/separation = 3

[node name="EconomyReform" type="VBoxContainer" parent="VBoxContainer/EconomyReforms"]
margin_right = 212.0
margin_bottom = 339.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Налоги_на_бедных"

[node name="EconomyReform2" type="VBoxContainer" parent="VBoxContainer/EconomyReforms"]
margin_left = 215.0
margin_right = 427.0
margin_bottom = 339.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Налоги_на_богатых"

[node name="EconomyReform3" type="VBoxContainer" parent="VBoxContainer/EconomyReforms"]
margin_left = 430.0
margin_right = 642.0
margin_bottom = 339.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Пошлины"

[node name="EconomyReform4" type="VBoxContainer" parent="VBoxContainer/EconomyReforms"]
margin_left = 645.0
margin_right = 857.0
margin_bottom = 339.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Снабжение_армии"

[node name="EconomyReform5" type="VBoxContainer" parent="VBoxContainer/EconomyReforms"]
margin_left = 860.0
margin_right = 1072.0
margin_bottom = 339.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Образование"

[node name="SocialReforms" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 339.0
margin_right = 1072.0
margin_bottom = 679.0
size_flags_vertical = 3
custom_constants/separation = 3
script = ExtResource( 6 )

[node name="SocialReform" type="VBoxContainer" parent="VBoxContainer/SocialReforms"]
margin_right = 212.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Пенсии"

[node name="SocialReform2" type="VBoxContainer" parent="VBoxContainer/SocialReforms"]
margin_left = 215.0
margin_right = 427.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Минимальная_зарплата"

[node name="SocialReform3" type="VBoxContainer" parent="VBoxContainer/SocialReforms"]
margin_left = 430.0
margin_right = 642.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Максимальный_рабочий_день"

[node name="SocialReform4" type="VBoxContainer" parent="VBoxContainer/SocialReforms"]
margin_left = 645.0
margin_right = 857.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Пособия_по_безработице"

[node name="SocialReform5" type="VBoxContainer" parent="VBoxContainer/SocialReforms"]
margin_left = 860.0
margin_right = 1072.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Здравохранение"

[node name="PolicyReforms" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 679.0
margin_right = 1072.0
margin_bottom = 1019.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 3
script = ExtResource( 6 )

[node name="PolicyReform" type="VBoxContainer" parent="VBoxContainer/PolicyReforms"]
margin_right = 212.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Политические_партии"

[node name="PolicyReform2" type="VBoxContainer" parent="VBoxContainer/PolicyReforms"]
margin_left = 215.0
margin_right = 427.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Право_на_обучение"

[node name="PolicyReform3" type="VBoxContainer" parent="VBoxContainer/PolicyReforms"]
margin_left = 430.0
margin_right = 642.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Общ_собрания"

[node name="PolicyReform4" type="VBoxContainer" parent="VBoxContainer/PolicyReforms"]
margin_left = 645.0
margin_right = 857.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Профсоюзы"

[node name="PolicyReform5" type="VBoxContainer" parent="VBoxContainer/PolicyReforms"]
margin_left = 860.0
margin_right = 1072.0
margin_bottom = 340.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
cotegory = "Пресса"
